--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scanner Pro (GitHub)</title>
+    <meta charset="utf-8"/>
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<link rel="manifest" href="manifest.webmanifest">
+	<meta name="full-screen" content="yes"/>
+	<meta name="screen-orientation" content="landscape"/>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="apple-mobile-web-app-title" content="Scanner Pro">
+	<!-- รูป icon -->
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/PAINGNON/index/refs/heads/main/Logo.png?v=5.8.34">												    													    
+	<title>Scanner Pro</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
