--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="apple-mobile-web-app-title" content="Scanner Pro">
 	<!-- รูป icon -->
-	<link rel="shortcut icon" href="https://raw.githubusercontent.com/PAINGNON/index/refs/heads/main/Logo.png?v=5.8.34">												    													    
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/PaingNon1993/scanner_pro/refs/heads/main/14745.jpg?v=5.8.34">												    													    
 	<title>Scanner Pro</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
